# peak-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  sw.js  tailwind.config.js  tsconfig.node.json
documents/: distribution.md
public/: workout-history.json
scripts/: generate-icon.mjs  parse-workout-notes.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_check_constraints.sql  002_security_hardening.sql
src-tauri/src/: lib.rs
src/components/dashboard/: DashboardView.tsx
src/components/goals/: GoalCard.tsx  GoalEditor.tsx  GoalsView.tsx
src/components/history/: AllLiftsOverlay.tsx  E1rmChart.tsx  HistoryView.tsx  SetLogList.tsx  StatCards.tsx  VolumeChart.tsx
src/components/layout/: BottomNav.tsx  Sidebar.tsx
src/components/programs/: ExerciseEditor.tsx  ProgramBrowser.tsx  ProgramBuilder.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: ConfirmModal.tsx
src/components/workout/: DayTabs.tsx  ExerciseCard.tsx  NoteModal.tsx  ProgressBar.tsx  SetRow.tsx  WorkoutView.tsx
src/hooks/: useGoals.ts  useHistory.ts  useNotes.ts  useProgram.ts  useTrainingMaxes.ts  useWorkoutLog.ts
src/lib/: calc.ts  constants.ts  db.ts  import-history.ts  import.ts  seed.ts  templates.ts  wave.ts
src/store/: appStore.ts  workoutStore.ts
src/types/: goal.ts  log.ts  program.ts  template.ts
